# x2chem

./: CMakeLists.txt  README.md  main.cpp  x2chem.cpp  x2chem.hpp
cmake/: FindLinAlg.cmake  HandleGoogleTest.cmake  HandleLinAlg.cmake  X2ChemConfig.cmake.in
cmake/linalg-modules/: FindBLIS.cmake  FindIBMESSL.cmake  FindIntelMKL.cmake  FindOpenBLAS.cmake  FindReferenceBLAS.cmake  FindReferenceLAPACK.cmake
examples/: CMakeLists.txt  x2c_hamiltonian.cxx
include/: x2chem.hpp
include/x2chem/: detail.hpp
src/: CMakeLists.txt  x2chem.cpp
test/: CMakeLists.txt  boettger.cxx  form1esoc.cxx  ortho.cxx  picturechange.cxx  test.cxx  transform.cxx  x2cham.cxx  x2ctest.cxx
